WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68634
[GTK] Fix coding style bits in ResourceHandleSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=68634
Summary
[GTK] Fix coding style bits in ResourceHandleSoup.cpp
Sergio Villar Senin
Reported
2011-09-22 10:18:54 PDT
The following coding style errors should be fixed: Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:33: Alphabetical sorting problem. [build/include_order] [4] Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:865: Use 0 instead of NULL. [readability/null] [5]
Attachments
Patch
(1.67 KB, patch)
2011-09-22 10:23 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Patch
(1.36 KB, patch)
2011-09-22 10:30 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2011-09-22 10:23:50 PDT
Created
attachment 108355
[details]
Patch
Philippe Normand
Comment 2
2011-09-22 10:25:51 PDT
Comment on
attachment 108355
[details]
Patch 0 is not a proper sentinel
Sergio Villar Senin
Comment 3
2011-09-22 10:30:54 PDT
Created
attachment 108357
[details]
Patch
Sergio Villar Senin
Comment 4
2011-09-26 00:48:55 PDT
Comment on
attachment 108357
[details]
Patch I'll let the commit-queue land this stupid bug I used to demonstrate some of the webkit-patch capabilities.
WebKit Review Bot
Comment 5
2011-09-26 02:04:07 PDT
Comment on
attachment 108357
[details]
Patch Clearing flags on attachment: 108357 Committed
r95938
: <
http://trac.webkit.org/changeset/95938
>
WebKit Review Bot
Comment 6
2011-09-26 02:04:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug