[GTK] Fix coding style bits in ResourceHandleSoup.cpp https://bugs.webkit.org/show_bug.cgi?id=68634

Patch by Sergio Villar Senin <svillar@igalia.com> on 2011-09-26
Reviewed by Martin Robinson.

No new tests needed.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::ResourceHandle::defaultSession):

git-svn-id: svn://svn.chromium.org/blink/trunk@95938 bbb929c8-8fbe-4397-9dbb-9b2b20218538